<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    tools:context=".screens.main.MainFragment">

    <data>

        <variable
            name="mainViewModel"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/black"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,RedundantDescriptionCheck" />

                <ImageButton
                    android:id="@+id/main_settings_button"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="8dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/main_settings_button_contentDescription"
                    android:scaleType="centerCrop"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_redirect_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#807A7A7A"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                        app:layout_constraintTop_toBottomOf="@+id/main_redirect_artists_textView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#807A7A7A"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/main_settings_close_imageButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:contentDescription="@string/main_redirect_close_imageButton_contentDescription"
                        android:cropToPadding="true"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:id="@+id/main_divider"
                style="@style/divider"
                app:layout_constraintBottom_toTopOf="@+id/main_create_station_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
...
