<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_register"
    tools:context=".screens.register.RegisterFragment">

    <data>

        <variable
            name="registerViewModel"
            type="com.example.android_vinyla.screens.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/register_back_button"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:src="@drawable/return_icon"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/register_back_button_step2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:src="@drawable/return_icon"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/login_vinyla_wide_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/vinyla_wide_logo_contentDescription"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:src="@drawable/vinyla_logo_wide" />

        <TextView
            android:id="@+id/register_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/libre_baskerville"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/register_email_input"
            style="@style/edit_text"
            android:hint="@string/email_example"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck" />


        <EditText
            android:id="@+id/register_password_input"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/register_password_confirmation_input"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck" />

        <!--   STEP 2 - FIRSTNAME     -->

        <EditText
            android:id="@+id/register_firstname_input"
            style="@style/edit_text"
            android:hint="@string/firstname_example"
            android:visibility="gone"
            tools:ignore="TouchTargetSizeCheck" />

        <!--   STEP 2 - LASTNAME     -->
        <EditText
            android:id="@+id/register_lastname_input"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastname_example"
            android:visibility="gone"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/register_next_button"
            style="@style/welcome_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/register_password_reset_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/libre_baskerville_bold"
            android:text="@string/register_password_reset_warning"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/register_signup_button"
            style="@style/welcome_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/register_progressBar"
            style="@android:style/Widget.Holo.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

    </LinearLayout>

</layout>